troca de imagem da fila para bliblio, e alguns ajustes finos